k8s/infra/minio/minio-console-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio-console.vityasy.me`)
      kind: Rule
      services:
        - name: minio-console
          port: 9001
      middlewares:
        - name: security-headers
          namespace: traefik
